[project]
name = "gpt-2-124m"
version = "0.1.0"
description = "Recreating the GPT 2 124M Model"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "datasets>=4.3.0",
    "numpy<2",
    "requests>=2.32.5",
    "tiktoken>=0.12.0",
    "torch>=2.9.0",
    "tqdm>=4.67.1",
    "transformers>=4.57.1",
]
